doc/k8s/plugins/prometheus/prometheus-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: kube-ops
  labels:
    app: prometheus
spec:
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - image: prom/prometheus
        name: prometheus
        command:
        - "/bin/prometheus"
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--storage.tsdb.path=/prometheus"  # 指定TSDB数据存储路径
        - "--storage.tsdb.retention=24h"     # 设置数据保留时间
        - "--web.enable-admin-api"           # 控制对admin HTTP API的访问，其中包括删除时间序列等功能
        - "--web.enable-lifecycle"           # 支持热更新，直接执行localhost:9090/-/reload立即生效
        ports:
        - containerPort: 9090
          protocol: TCP
          name: http
        # 设置挂载目录
        volumeMounts:
        - mountPath: "/prometheus"
          # subPath应对多个容器挂载同一个数据目录的情况, 用作区分(其会在挂载目录下创建名为prometheus的目录)
          subPath: prometheus
          name: data
        - mountPath: "/etc/prometheus"
          name: config-volume
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 512Mi
      # 部署alertManager
      - image: prom/alertmanager
        name: alertmanager
        #imagePullPolicy: IfNotPresent
        args:
        - "--config.file=/etc/alertmanager/config.yml"
        - "--storage.path=/alertmanager/data"
        ports:
        - containerPort: 9093
          name: http
        volumeMounts:
        - mountPath: "/etc/alertmanager"
          name: alertcfg
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 256Mi
      # 必须添加securityContext属性, 将runAsUser设置为0, 因为运行prometheus所使用的用户是nobody,
      # 不设置会报permission denied
      securityContext:
        runAsUser: 0
      volumes:
      - name: data
        persistentVolumeClaim:
          # 使用名为prometheus的pvc
          claimName: prometheus
      - configMap:
          name: prometheus-config
        name: config-volume
      # 必须先创建alertManager的configMap
      - name: alertcfg
        configMap:
          name: alert-config
